Fix Installed label vertical alignment

--- a/plugins/woocommerce-admin/client/core-profiler/components/plugin-card/plugin-card.scss
+++ b/plugins/woocommerce-admin/client/core-profiler/components/plugin-card/plugin-card.scss
@@ -128,6 +128,7 @@
 				color: #00450c;
 				font-size: 11px;
 				font-weight: 500;
+				line-height: 20px;
 				@include breakpoint( '<782px' ) {
 					display: none;
 				}
